--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "solarSystem",
+    "version": "1.1",
     "dependencies": {
         "three": "latest",
         "Three-DOMEvents": "git+https://github.com/NiklasStrothoff/three-domevents.git"
